# hi3516dv300camera

./: README
board/: CMakeLists.txt  Makefile  Makefile_callback  Makefile_platform  Makefile_plugin  comm.mk  comm_share.mk  env.mk  rmobj.bat
board/include/: aidefines.h  common.h  m_if.h  nsddefines.h  nsdnetinterface.h  privydef.h
board/include/third/: hconvert.h  hdefines.h
board/include/third/base/: hatomic.h  hautoptr.h  hcharset.h  hcoll.h  hcomm.h  hdatetime.h  hdelay.h  hevent.h  hlog.h  hmap.h  hmutex.h  hobject.h  hstring.h  hthread.h  htimerthread.h
board/src/modules/ai/: Makefile
board/src/modules/ai/src/: ailib.cpp  ailib.h  sample_comm_ive.c  sample_comm_ive.h  sample_comm_nnie.c  sample_comm_nnie.h  sample_nnie.c  sample_nnie.h  sample_svp_nnie_software.h
board/src/modules/ai_callback/: Makefile  ailib.dsp  ailib.vcproj
board/src/modules/ai_callback/src/: ailib.cpp  ailib.h
board/src/modules/platform/customer/: Makefile  customer.vcproj
board/src/modules/platform/customer/src/: customer.cpp  customer.h
board/src/modules/plugin/: Makefile
board/src/modules/plugin/src/: plugin.cpp  plugin.h
doc/: 修改说明.txt
doc/software/: AI模块开发流程.docx  Huatu_HVP_FAQ.docx  Huatu_HVP接口说明文档.docx  ~$模块开发流程.docx  平台platform模块开发流程.docx  插件plugin模块开发流程.docx
