cmake_minimum_required(VERSION 3.14)
project(board)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)
include_directories(include/third)
include_directories(include/third/base)
include_directories(include/third/iniparser)
include_directories(include/third/openssl)
include_directories(src/modules/ai/src)
include_directories(src/modules/ai_callback/src)
include_directories(src/modules/platform/customer/src)
include_directories(src/modules/plugin/src)

add_executable(board
        include/third/base/hatomic.h
        include/third/base/hautoptr.h
        include/third/base/hcharset.h
        include/third/base/hcoll.h
        include/third/base/hcomm.h
        include/third/base/hdatetime.h
        include/third/base/hdelay.h
        include/third/base/hevent.h
        include/third/base/hlog.h
        include/third/base/hmap.h
        include/third/base/hmutex.h
        include/third/base/hobject.h
        include/third/base/hstring.h
        include/third/base/hthread.h
        include/third/base/htimerthread.h
        include/third/iniparser/dictionary.h
        include/third/iniparser/iniparser.h
        include/third/openssl/aes.h
        include/third/openssl/asn1.h
        include/third/openssl/asn1_mac.h
        include/third/openssl/asn1t.h
        include/third/openssl/bio.h
        include/third/openssl/blowfish.h
        include/third/openssl/bn.h
        include/third/openssl/buffer.h
        include/third/openssl/camellia.h
        include/third/openssl/cast.h
        include/third/openssl/cmac.h
        include/third/openssl/cms.h
        include/third/openssl/comp.h
        include/third/openssl/conf.h
        include/third/openssl/conf_api.h
        include/third/openssl/crypto.h
        include/third/openssl/des.h
        include/third/openssl/des_old.h
        include/third/openssl/dh.h
        include/third/openssl/dsa.h
        include/third/openssl/dso.h
        include/third/openssl/dtls1.h
        include/third/openssl/e_os2.h
        include/third/openssl/ebcdic.h
        include/third/openssl/ec.h
        include/third/openssl/ecdh.h
        include/third/openssl/ecdsa.h
        include/third/openssl/engine.h
        include/third/openssl/err.h
        include/third/openssl/evp.h
        include/third/openssl/hmac.h
        include/third/openssl/idea.h
        include/third/openssl/krb5_asn.h
        include/third/openssl/kssl.h
        include/third/openssl/lhash.h
        include/third/openssl/md4.h
        include/third/openssl/md5.h
        include/third/openssl/mdc2.h
        include/third/openssl/modes.h
        include/third/openssl/obj_mac.h
        include/third/openssl/objects.h
        include/third/openssl/ocsp.h
        include/third/openssl/opensslconf.h
        include/third/openssl/opensslv.h
        include/third/openssl/ossl_typ.h
        include/third/openssl/pem.h
        include/third/openssl/pem2.h
        include/third/openssl/pkcs12.h
        include/third/openssl/pkcs7.h
        include/third/openssl/pqueue.h
        include/third/openssl/rand.h
        include/third/openssl/rc2.h
        include/third/openssl/rc4.h
        include/third/openssl/ripemd.h
        include/third/openssl/rsa.h
        include/third/openssl/safestack.h
        include/third/openssl/seed.h
        include/third/openssl/sha.h
        include/third/openssl/srp.h
        include/third/openssl/srtp.h
        include/third/openssl/ssl.h
        include/third/openssl/ssl2.h
        include/third/openssl/ssl23.h
        include/third/openssl/ssl3.h
        include/third/openssl/stack.h
        include/third/openssl/symhacks.h
        include/third/openssl/tls1.h
        include/third/openssl/ts.h
        include/third/openssl/txt_db.h
        include/third/openssl/ui.h
        include/third/openssl/ui_compat.h
        include/third/openssl/whrlpool.h
        include/third/openssl/x509.h
        include/third/openssl/x509_vfy.h
        include/third/openssl/x509v3.h
        include/third/hconvert.h
        include/third/hdefines.h
        include/aidefines.h
        include/common.h
        include/m_if.h
        include/nsddefines.h
        include/nsdnetinterface.h
        include/privydef.h
        src/modules/ai/obj/hisi3516d/src/ailib.d.7749.i
        src/modules/ai/obj/src/ailib.d.30671.i
        src/modules/ai/obj/src/ailib.d.30708.i
        src/modules/ai/obj/src/ailib.d.31297.i
        src/modules/ai/obj/src/ailib.d.31345.i
        src/modules/ai/obj/src/ailib.d.31450.i
        src/modules/ai/obj/src/ailib.d.31484.i
        src/modules/ai/obj/src/ailib.d.31517.i
        src/modules/ai/obj/src/ailib.d.31600.i
        src/modules/ai/obj/src/ailib.d.31605.i
        src/modules/ai/obj/src/ailib.d.31614.i
        src/modules/ai/obj/src/ailib.d.31656.i
        src/modules/ai/obj/src/ailib.d.31661.i
        src/modules/ai/obj/src/ailib.d.31672.i
        src/modules/ai/obj/src/ailib.d.31897.i
        src/modules/ai/obj/src/ailib.d.31906.i
        src/modules/ai/obj/src/ailib.d.31948.i
        src/modules/ai/obj/src/ailib.d.31953.i
        src/modules/ai/obj/src/sample_comm_ive.d.30646.i
        src/modules/ai/obj/src/sample_comm_ive.d.30683.i
        src/modules/ai/obj/src/sample_comm_ive.d.31272.i
        src/modules/ai/obj/src/sample_comm_ive.d.31320.i
        src/modules/ai/obj/src/sample_comm_ive.d.31425.i
        src/modules/ai/obj/src/sample_comm_ive.d.31459.i
        src/modules/ai/obj/src/sample_comm_ive.d.31492.i
        src/modules/ai/obj/src/sample_comm_nnie.d.30666.i
        src/modules/ai/obj/src/sample_comm_nnie.d.30703.i
        src/modules/ai/obj/src/sample_comm_nnie.d.31292.i
        src/modules/ai/obj/src/sample_comm_nnie.d.31340.i
        src/modules/ai/obj/src/sample_comm_nnie.d.31445.i
        src/modules/ai/obj/src/sample_comm_nnie.d.31479.i
        src/modules/ai/obj/src/sample_comm_nnie.d.31512.i
        src/modules/ai/obj/src/sample_comm_svp.d.30661.i
        src/modules/ai/obj/src/sample_comm_svp.d.30698.i
        src/modules/ai/obj/src/sample_comm_svp.d.31287.i
        src/modules/ai/obj/src/sample_comm_svp.d.31335.i
        src/modules/ai/obj/src/sample_comm_svp.d.31440.i
        src/modules/ai/obj/src/sample_comm_svp.d.31474.i
        src/modules/ai/obj/src/sample_comm_svp.d.31507.i
        src/modules/ai/obj/src/sample_nnie.d.30656.i
        src/modules/ai/obj/src/sample_nnie.d.30693.i
        src/modules/ai/obj/src/sample_nnie.d.31282.i
        src/modules/ai/obj/src/sample_nnie.d.31330.i
        src/modules/ai/obj/src/sample_nnie.d.31435.i
        src/modules/ai/obj/src/sample_nnie.d.31469.i
        src/modules/ai/obj/src/sample_nnie.d.31502.i
        src/modules/ai/obj/src/sample_svp_nnie_software.d.30651.i
        src/modules/ai/obj/src/sample_svp_nnie_software.d.30688.i
        src/modules/ai/obj/src/sample_svp_nnie_software.d.31277.i
        src/modules/ai/obj/src/sample_svp_nnie_software.d.31325.i
        src/modules/ai/obj/src/sample_svp_nnie_software.d.31430.i
        src/modules/ai/obj/src/sample_svp_nnie_software.d.31464.i
        src/modules/ai/obj/src/sample_svp_nnie_software.d.31497.i
        src/modules/ai/src/ailib.cpp
        src/modules/ai/src/ailib.h
        src/modules/ai/src/sample_comm.h
        src/modules/ai/src/sample_comm_ive.c
        src/modules/ai/src/sample_comm_ive.h
        src/modules/ai/src/sample_comm_nnie.c
        src/modules/ai/src/sample_comm_nnie.h
        src/modules/ai/src/sample_comm_svp.c
        src/modules/ai/src/sample_comm_svp.h
        src/modules/ai/src/sample_nnie.c
        src/modules/ai/src/sample_nnie.h
        src/modules/ai/src/sample_nnie_main.h
        src/modules/ai/src/sample_svp_nnie_software.c
        src/modules/ai/src/sample_svp_nnie_software.h
        src/modules/ai_callback/src/ailib.cpp
        src/modules/ai_callback/src/ailib.h
        src/modules/platform/customer/src/customer.cpp
        src/modules/platform/customer/src/customer.h
        src/modules/plugin/src/plugin.cpp
        src/modules/plugin/src/plugin.h)
